web/ingress-clusterlog.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-clusterlog
  namespace: web
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: internal
  tls:
    - hosts:
      - log.cluster.comame.dev
      secretName: log-cluster-comame-dev
  rules:
    - host: log.cluster.comame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterlog
                port:
                  number: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: clusterlog
  namespace: web
spec:
  type: ExternalName
  externalName: clusterlog.clusterlog.svc.cluster.local
