web/ingress-jenkins.yml
## Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jenkins-external
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: internal # or external
  tls:
    - hosts:
        - jenkins.comame.dev # host
      secretName: jenkins.comame.dev # host
  rules:
    - host: jenkins.comame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jenkins
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: external # or external
  tls:
    - hosts:
        - jenkins.comame.xyz # host
      secretName: jenkins.comame.xyz # host
  rules:
    - host: jenkins.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080


---

# Service for Ingress

apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: web
spec:
  type: ExternalName
  externalName: jenkins-service.jenkins.svc.cluster.local
