web/ingress-mastodon.yml
## Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mastodon
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: external # or external
  tls:
    - hosts:
        - mastodon.comame.xyz # host
      secretName: mastodon.comame.xyz # host
  rules:
    - host: mastodon.comame.xyz # host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mastodon
                port:
                  number: 3000
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: mastodon
                port:
                  number: 4000

---

# Service for Ingress

apiVersion: v1
kind: Service
metadata:
  name: mastodon
  namespace: web
spec:
  type: ExternalName
  externalName: mastodon.mastodon.svc.cluster.local
