web/ingress-secret-manager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-secret-manager
  namespace: web
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - secret-manager.comame.dev
      secretName: secret-manager.comame.dev
  rules:
    - host: secret-manager.comame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secret-manager
                port:
                  number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: secret-manager
  namespace: web
spec:
  type: ExternalName
  externalName: secret-manager.secret-manager.svc.cluster.local
