web/ingress-test-httpd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-httpd
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: external
  rules:
    - http:
        paths:
          - path: /test-httpd
            pathType: Prefix
            backend:
              service:
                name: test-httpd
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: test-httpd
  namespace: web
spec:
  type: ExternalName
  externalName: test-httpd.test-httpd.svc.cluster.local
