web/ingress-vmq.yml
## Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vmq
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: external # or external
  tls:
    - hosts:
        - vmq.comame.xyz # host
      secretName: vmq.comame.xyz # host
  rules:
    - host: vmq.comame.xyz # host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmq
                port:
                  number: 80

---

# Service for Ingress

apiVersion: v1
kind: Service
metadata:
  name: vmq
  namespace: web
spec:
  type: ExternalName
  externalName: vmq.comame-xyz.svc.cluster.local
