web/ingress-webrtc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webrtc
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - webrtc.comame.dev
      secretName: webrtc.comame.dev
  rules:
    - host: webrtc.comame.dev
      http:
        paths:
          - path: /signaling
            pathType: Prefix
            backend:
              service:
                name: remote-cam-signaling
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: remote-cam
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: remote-cam
  namespace: web
spec:
  type: ExternalName
  externalName: remote-cam.webrtc.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: remote-cam-signaling
  namespace: web
spec:
  type: ExternalName
  externalName: remote-cam-signaling.webrtc.svc.cluster.local
